--- a/configs/zynq_dm1_g9_sd_defconfig
+++ b/configs/zynq_dm1_g9_sd_defconfig
@@ -1,6 +1,7 @@
 CONFIG_ARM=y
 CONFIG_ARCH_ZYNQ=y
-CONFIG_DEFAULT_DEVICE_TREE="zynq-zc702"
+CONFIG_TARGET_ZYNQ_DM1_G9=y
+CONFIG_DEFAULT_DEVICE_TREE="zynq-dm1-g9"
 CONFIG_SPL=y
 CONFIG_FIT=y
 CONFIG_FIT_VERBOSE=y
@@ -25,3 +26,4 @@ CONFIG_DEBUG_UART=y
 CONFIG_DEBUG_UART_ZYNQ=y
 CONFIG_DEBUG_UART_BASE=0xe0001000
 CONFIG_DEBUG_UART_CLOCK=50000000
+CONFIG_ENV_IS_NOWHERE=y
