--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -78,7 +78,8 @@ dtb-$(CONFIG_ARCH_ZYNQ) += zynq-zc702.dtb \
 	zynq-zc770-xm012.dtb \
 	zynq-zc770-xm013.dtb \
 	zynq-dm1-g9.dtb \
-	zynq-dm1-g19.dtb
+	zynq-dm1-g19.dtb \
+	zynq-am1-s9.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-ep108.dtb
 dtb-$(CONFIG_AM33XX) += am335x-boneblack.dtb am335x-evm.dtb
