--- a/arch/arm/mach-zynq/Kconfig
+++ b/arch/arm/mach-zynq/Kconfig
@@ -40,6 +40,9 @@ config TARGET_ZYNQ_DM1_G9
 config TARGET_ZYNQ_DM1_G19
 	bool "Zynq DragonMint T1/G19 Board"
 
+config TARGET_ZYNQ_AM1_S9
+	bool "Zynq AntMiner S9 Board"
+
 endchoice
 
 config SYS_BOARD
@@ -59,5 +62,6 @@ config SYS_CONFIG_NAME
 	default "zynq_zc770" if TARGET_ZYNQ_ZC770
 	default "zynq_zybo" if TARGET_ZYNQ_ZYBO
 	default "zynq_dm1" if TARGET_ZYNQ_DM1_G9 || TARGET_ZYNQ_DM1_G19
+	default "zynq_am1" if TARGET_ZYNQ_AM1_S9
 
 endif
