story #2159: Add support for T1/G29 control board
- add new target for G29 board
- add initialization vectors for zynq G29 platform

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -79,6 +79,7 @@ dtb-$(CONFIG_ARCH_ZYNQ) += zynq-zc702.dtb \
 	zynq-zc770-xm013.dtb \
 	zynq-dm1-g9.dtb \
 	zynq-dm1-g19.dtb \
+	zynq-dm1-g29.dtb \
 	zynq-am1-s9.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-ep108.dtb
