Add new platform target Antminer S15
- this is initial implementation mainly copied from Antminer S9

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -80,7 +80,8 @@ dtb-$(CONFIG_ARCH_ZYNQ) += zynq-zc702.dtb \
 	zynq-dm1-g9.dtb \
 	zynq-dm1-g19.dtb \
 	zynq-dm1-g29.dtb \
-	zynq-am1-s9.dtb
+	zynq-am1-s9.dtb \
+	zynq-am2-s15.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-ep108.dtb
 dtb-$(CONFIG_AM33XX) += am335x-boneblack.dtb am335x-evm.dtb
