--- a/arch/arm/dts/zynq-am2-s15.dts
+++ b/arch/arm/dts/zynq-am2-s15.dts
@@ -2,13 +2,13 @@
 #include "zynq-7000.dtsi"
 
 / {
-	model = "AntMiner S9 Miner Control Board";
+	model = "Antminer S15 Miner Control Board";
 	compatible = "xlnx,zynq-zc702", "xlnx,zynq-7000";
 
 	aliases {
 		ethernet0 = &gem0;
 		i2c0 = &i2c0;
-		serial0 = &uart1;
+		serial0 = &uart0;
 		spi0 = &qspi;
 		mmc0 = &sdhci0;
 	};
