s15: Create special SD image without detection of boot mode
- add 'CONFIG_SD_BOOT' to Antminer S15 configuration file for SD
- set 'sdboot' for booting image via U-Boot stored in NAND

--- a/configs/zynq_am2_s15_sd_defconfig
+++ b/configs/zynq_am2_s15_sd_defconfig
@@ -26,4 +26,5 @@ CONFIG_DEBUG_UART=y
 CONFIG_DEBUG_UART_ZYNQ=y
 CONFIG_DEBUG_UART_BASE=0xe0000000
 CONFIG_DEBUG_UART_CLOCK=50000000
+CONFIG_SYS_EXTRA_OPTIONS="SD_BOOT"
 CONFIG_ENV_IS_NOWHERE=y
